--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -96,6 +96,13 @@
   	Year={2013}
 }
 
+@book{chauhan2013,
+	Title={Learning Cloudera Impala},
+	Author={Chauhan, Avkash},
+	Year={2013},
+	Publisher={Packt Publishing Ltd}
+}
+
 @book{george2011,
   	Title={HBase: the definitive guide},
   	Author={George, Lars},
@@ -108,6 +115,13 @@
   	Author={Karau, Holden and Konwinski, Andy and Wendell, Patrick and Zaharia, Matei},
   	Year={2015},
   	Publisher={" O'Reilly Media, Inc."}
+}
+
+@book{russell2013,
+	Title={Cloudera Impala},
+	Author={Russell, John},
+	Year={2013},
+	Publisher={" O'Reilly Media, Inc."}
 }
 
 @book{white2015,
@@ -197,6 +211,13 @@
 	Year = {2014},
 	DOI={10.1109/CSCI.2014.140},
 	Month={March},
+}
+
+@inproceedings{bittorf2015,
+	Title = {Impala: A Modern, Open-Source SQL Engine for Hadoop},
+	Author = {Bittorf, Marcel Kornacker Alexander Behm Victor and Bobrovytsky, Taras and Erickson, Casey Ching Alan Choi Justin and Hecht, Martin Grund Daniel and Kuff, Matthew Jacobs Ishaan Joshi Lenni and Leblang, Dileep Kumar Alex and Robinson, Nong Li Ippokratis Pandis Henry and Rus, David Rorke Silvius and Wanderman, John Russell Dimitris Tsirogiannis Skye and Yoder, Milne Michael},
+	Year = {2015},
+	Organization = {CIDR}
 }
 
 @inproceedings{carstoiu2010,
